--- a/src/index.html
+++ b/src/index.html
@@ -260,7 +260,7 @@
         </div>
 
         <form action="" class="form form_add-review">
-          <fieldset class="modal__fieldset form__fieldset_review">
+          <fieldset class="form__fieldset form__fieldset_review">
             <label class="form__label">
               <span class="form__text">Имя</span>
               <input type="text" class="form__input">
@@ -316,7 +316,7 @@
   <div class="modal modal_sign-up">
     <div class="modal__body">
       <h3 class="modal__title">Регистрация специалиста</h3>
-      <form  class="form form-sign-up">
+      <form  class="form form_sign-up">
         <fieldset class="form__fieldset form__fieldset_user">
           <label class="form__label">
             <span class="form__text">Имя</span>
@@ -425,7 +425,7 @@
   <div class="modal modal_sign-in">
     <div class="modal__body">
       <h3 class="modal__title">Регистрация специалиста</h3>
-      <form  class="form form-sign-in">
+      <form  class="form form_sign-in">
 
         <fieldset class="form__fieldset form__fieldset_user">
           <label class="form__label">
